--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,17 @@
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
 
+	<androidx.appcompat.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:background="?attr/colorPrimary"
+		android:minHeight="?attr/actionBarSize"
+		android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
+
 	<EditText
 		android:id="@+id/edt_message"
 		android:layout_width="0dp"
@@ -19,7 +30,7 @@
 		app:layout_constraintEnd_toStartOf="@+id/button"
 		app:layout_constraintHorizontal_bias="0.5"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 	<Button
 		android:id="@+id/button"
@@ -33,4 +44,6 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.5"
 		app:layout_constraintStart_toEndOf="@+id/edt_message" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
