--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<item
 		android:id="@+id/add"
@@ -14,6 +15,15 @@
 		>
 
 	</item>
+<!--This is Search on action bar-->
+	<item
+		android:id="@+id/search"
+		android:title="Search"
+		android:icon="@drawable/ic_baseline_search_24"
+		app:showAsAction="ifRoom|collapseActionView"
+		app:actionViewClass="androidx.appcompat.widget.SearchView"
+		/>
+
 
 	<item
 		android:id="@+id/share"
